@@ -4,6 +4,8 @@ Changes between 2.4.2 and 2.4.3
 - fix unicode handling with new monkeypatch.setattr(import_path, value)
   API.  Thanks Rob Dennis.  Fixes issue371.
 
+- fix unicode handling with junitxml, fixes issue368.
+
 - In assertion rewriting mode on Python 2, fix the detection of coding
   cookies. See issue #330.
 
